# portfoliosite

./: #main.py#  #ttw_oauth_manager.py#  .coverage  .gitignore  .setup-smtp-temp.sh  DATABASE_LOGGING_IMPLEMENTATION.md  DEPERSONALIZATION_PLAN.md  Dockerfile  EMAIL_SETUP.md  LICENSE  LINKEDIN_INTEGRATION.md  LINKEDIN_OAUTH_IMPLEMENTATION.md  LINKEDIN_SETUP_GUIDE.md  MIGRATION_INSTRUCTIONS.md  OAUTH_SETUP.md  PRODUCTION_OAUTH_CONFIG.md  README.md  admin_setup.py  analytics.py  analytics_middleware.py  apply_logs_migration.py  apply_oauth_schema.py  apply_start_date_migration.py  auth.py  before_linkedin_ui.html  bootstrap_security.py  check_database_schema.py  check_linkedin_config.py  check_table_structure.py  cloudbuild.yaml  configure_smtp.sh  cookie_auth.py  create_oauth_tables.py  create_oauth_tables_direct.py  database.py  database_logging.py  debug_startup.sh  demo_database_logging.py  demo_graphql.py  deploy-credentials.example.sh  (+49 more)
app/: #resolvers.py#  main.py  oauth_client.py  resolvers.py
assets/: after_linkedin_ui.html  analytics-admin.css  philosophy.css  showcase.css  style.css
docs/: nginx-virtualhost.md
documents/: BOOTSTRAP_REMOVAL_SUMMARY.md  EMAIL_SETUP.md  GOOGLE_OAUTH_SETUP.md  GOOGLE_VERIFICATION_ISSUE.md  LINKEDIN_INTEGRATION.md  LINKEDIN_SETUP_GUIDE.md
hosted_fastapi/: __init__.py  main.py
nginx/: README.md  blackburnsystems.com  blackburnsystems.com.ssl
remove/: apply_oauth_schema.py  debug_oauth.py  google_oauth_tokens.html  linkedin_data_sync_legacy.py  migrate_linkedin_to_oauth_apps.py  oauth_manager_legacy.py  quick_linkedin_setup.py  (+1 more)
(+138 files in other folders)
