[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hosted_fastapi"
version = "0.1.0"
description = "A FastAPI application for hosting and deployment"
authors = [
    {name = "Daniel Blackburn", email = "daniel@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/blackburnd/hosted_fastapi"
Repository = "https://github.com/blackburnd/hosted_fastapi"
Issues = "https://github.com/blackburnd/hosted_fastapi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hosted_fastapi*"]